fix pages mobile overflow

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,10 +1,8 @@
 .container {
   max-width: 56rem;
-  /* padding: 0 1rem; */
   padding: 50px;
   margin: 3rem auto 6rem;
   background-color: aqua;
-  overflow-x: hidden;
 }
 
 .header {
@@ -18,7 +16,8 @@
 }
 
 .nav {
-  color: black !important;
+  color: rgb(255, 255, 255) !important;
   position: sticky;
-  /* background-color: #7B3793; */
+  overflow-x: hidden;
+  background-color: #d6d6d6;
 }
