--- a/styles/globals.css
+++ b/styles/globals.css
@@ -482,6 +482,10 @@ h2 {
     width: 3.75rem;
     height: 3.75rem;
   }
+
+  .experience-image-wrapper {
+    max-width: 400px;
+  }
 }
 
 @media screen and (max-width: 768px) {
